# FTNd

./: .cvsignore  .gitignore  .hgignore  AUTHORS  CRON.sh  ChangeLog  ChangeLog_1998  ChangeLog_1999  ChangeLog_2000  ChangeLog_2001  ChangeLog_2002  ChangeLog_2003  ChangeLog_2004  ChangeLog_2005  ChangeLog_2006  ChangeLog_2007  DEBUG  FILE_ID.DIZ.in  INSTALL  INSTALL.in  MBSE.FAQ  Makefile  Makefile.am  Makefile.global.in  Makefile.in  README  README.Debian  README.Gentoo  README.GoldED  README.Packages  README.Ubuntu  README.developer  README.isdn  SETUP.sh  TODO  UPGRADE  about.html  acconfig.h  aclocal.m4  bbbs.css  (+24 more)
examples/: .gitignore  Makefile  Makefile.am  Makefile.in  endian.c  endian.h  etc.tar  footer.txt  header.txt  menus-be.tar  menus-de.tar  menus-en.tar  menus-es.tar  menus-le.tar  menus.tar  templates-de.tar  templates-en.tar  templates-es.tar  templates-nl.tar  templates.tar  txtfiles-de.tar  txtfiles-en.tar  txtfiles-es.tar  txtfiles.tar
html/: .cvsignore  Makefile  Makefile.am  Makefile.in  basic.html  basic.html.in  date.html  dist.html  doors.html  errcodes.html  faq.html  flow.html  gwnews.html  index.htm  index.htm.in  index.html.in  install.html  intergate.html  intro.html  invoking.html  known_bugs.html  manual.css  mgetty.html  nodelist.html  postfix.html  routing.html  upgrade.html.in  ups.html
html/ftsc/: fsc-0035.html  fsc-0039.html  fsc-0046.html  fsc-0048.html  fsc-0049.html  fsc-0050.html  fsc-0053.html  fsc-0056.html  fsc-0057.html  fsc-0059.html  fsc-0062.html  fsc-0070.html  fsc-0072.html  fsc-0087.html  fsc-0088.html  fsc-0091.html  fsc-0092.html  fsc-0093.html  fsp-1001.html  fsp-1002.html  fsp-1003.html  fsp-1004.html  fsp-1005.html  fsp-1006.html  fsp-1007.html  fsp-1008.html  fsp-1009.html  fsp-1010.html  fsp-1011.html  fta-1005.html  fts-0001.html  fts-0004.html  fts-0005.html  fts-0006.html  fts-0007.html  fts-0008.html  fts-0009.html  fts-4001.html  fts-4008.html  fts-4009.html  (+5 more)
html/license/: copying.html  hydracom.html  index.htm  index.html  jam.html
html/menus/: control.html  index.htm  index.html  menu0.html  menu100.html  menu200.html  menu300.html  menu400.html  menu500.html
html/misc/: dropfile.html  filefind.html  fileid.html  ftpserver.html  index.htm  index.html  ipmailer.html  jam.html  outbound.html  semafore.html  usleep.html  webserver.html
html/programs/: ftnaff.html  ftnall.html  ftnbbs.html  ftncico.html  ftndiff.html  ftnfido.html  ftnfile.html  ftnindex.html  ftnlang.html  ftnlogin.html  ftnmon.html  ftnmsg.html  ftnnntp.html  ftnout.html  ftnpasswd.html  ftnseq.html  ftnsetup.html  ftnstat.html  ftntask.html  ftntoberep.html  ftnuser.html  ftnuseradd.html  import.html  index.htm  index.html  mbaff.html  mball.html  mbchat.html  mbcico.html  mbdiff.html  mbfbgen.html  (+21 more)
lang/: .cvsignore  Language.xref  Makefile  Makefile.am  Makefile.in  README  chinese.txt  dutch.txt  english.txt  french.txt  galego.txt  german.txt  germandu.txt  italian.txt  source.de  source.en  source.es  source.fr  source.gl  source.nl  source.zh  spanish.txt
lib/: .cvsignore  Diesel.doc  FAQ  Makefile  Makefile.am  Makefile.in  README  README.UBI  README.diesel  README.macro  README.memwatch  USING  ansi.h  attach.c  batchrd.c  bluewave.h  charconv.c  charconv_hz.c  charconv_jp.c  charconv_utf.c  charset.c  charset.map  chinese.map  clcomm.c  clcomm.h  client.c  common.h  crc.c  dbcfg.c  dbcfg.h  dbdupe.c  dbdupe.h  dbfdb.c  dbftn.c  dbftn.h  dbmsgs.c  dbmsgs.h  dbnode.c  dbnode.h  dbtic.c  (+96 more)
mbcico/: .cvsignore  Makefile  Makefile.am  Makefile.in  README  answer.c  answer.h  atoul.c  atoul.h  binkp.c  binkp.h  binkpnew.c  binkpnew.h  binkpold.c  binkpold.h  bopenfile.c  bopenfile.h  call.c  call.h  callall.c  callall.h  callstat.c  callstat.h  chat.c  chat.h  config.h  dial.c  dial.h  dietifna.c  dietifna.h  dirlock.c  dirlock.h  emsi.c  emsi.h  emsidat.c  emsidat.h  filelist.c  filelist.h  filetime.c  ftsc.c  (+61 more)
mbfido/: .cvsignore  Makefile  Makefile.am  Makefile.in  README  addbbs.c  addbbs.h  addpkt.c  addpkt.h  aliasdb.c  announce.c  areamgr.c  areamgr.h  atoul.c  atoul.h  backalias.c  bounce.c  bounce.h  bread.c  bread.h  bwrite.c  bwrite.h  cookie.c  cookie.h  createf.c  createf.h  createm.c  createm.h  dirlock.c  dirlock.h  dirsession.c  dirsession.h  echoout.c  echoout.h  fflist.c  fflist.h  filefind.c  filemgr.c  filemgr.h  flock.c  (+126 more)
mbsebbs/: .cvsignore  Makefile  Makefile.am  Makefile.in  bank.c  bank.h  bbslist.c  bbslist.h  bye.c  change.c  change.h  chat.c  chat.h  chowntty.c  commonio.c  commonio.h  dispfile.c  dispfile.h  door.c  door.h  email.c  email.h  encrypt.c  env.c  env.h  exitinfo.c  exitinfo.h  failure.c  failure.h  file.c  file.h  filesub.c  filesub.h  fsedit.c  fsedit.h  funcs.c  funcs.h  funcs4.c  funcs4.h  getdef.c  (+118 more)
mbsetup/: .cvsignore  Makefile  Makefile.am  Makefile.in  grlist.c  ledit.c  ledit.h  m_archive.c  m_archive.h  m_bbs.c  m_bbs.h  m_bbslist.c  m_bbslist.h  m_domain.c  m_domain.h  m_farea.c  m_farea.h  m_fdb.c  m_fdb.h  m_ff.c  m_ff.h  m_fgroup.c  m_fgroup.h  m_fido.c  m_fido.h  m_global.c  m_global.h  m_hatch.c  m_hatch.h  m_ibc.c  m_ibc.h  m_lang.c  m_lang.h  m_limits.c  m_limits.h  m_magic.c  m_magic.h  m_mail.c  m_marea.c  m_marea.h  (+38 more)
mbtask/: .cvsignore  Makefile  Makefile.am  Makefile.in  calllist.c  calllist.h  callstat.c  callstat.h  crc.c  crc.h  issue  issue.netbsd  libs.h  mbtask.c  mbtask.h  nodelist.c  nodelist.h  outstat.c  outstat.h  pidinfo.c  ping.c  ping.h  ports.c  ports.h  scanout.c  scanout.h  signame.c  signame.h  taskchat.c  taskchat.h  taskcomm.c  taskcomm.h  taskdisk.c  taskdisk.h  taskibc.c  taskibc.h  taskinfo.c  taskinfo.h  taskirc.c  taskirc.h  (+6 more)
script/: .cvsignore  Makefile  Makefile.am  Makefile.in  README  bbsdoor.sh  bbsjmacsrc  bbsjoerc  doors.bat  editor  editor.in  ftnbbsdos  hatch  init.Arch  init.Debian  init.FreeBSD  init.Gentoo  init.NetBSD  init.OpenBSD  init.RedHat  init.Slackware  init.SuSE  installinit  installinit.sh  maint  mbse.start  mbse.stop  mbsedos  midnight  monthly  rc  rc.shutdown  rundoor.sh  runvirtual.sh  setup.ftnd  setup.mbse  weekly
(+718 files in other folders)
